// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ListEditor.svelte > should render 1`] = `
<body>
  <div>
    <list-editor
      class="flex "
    >
      <list
        aria-label="list"
        class="flex flex-col w-full flex-shrink-0 select-none list"
        role="listbox"
        tabindex="0"
      >
         
        <item
          aria-selected="true"
          class="item"
          data-path="0"
          role="option"
        >
          
           
          <p>
            Alpha
          </p>
          
           
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="1"
          role="option"
        >
          
           
          <p>
            Beta
          </p>
          
           
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="2"
          role="option"
        >
          
           
          <p>
            Charlie
          </p>
          
           
        </item>
      </list>
       
      <item-editor
        class="flex"
      >
         
        <field-layout
          aria-label=""
          class="object "
        >
          <input-field
            class="flex flex-col input-text disabled"
          >
            <label
              for="0.id"
            >
              0.id
            </label>
             
            <field
              aria-label="0.id"
              class="w-full flex flex-row items-center"
            >
               
               
              <input
                id="0.id"
                name="0.id"
                readonly=""
                type="text"
              />
              
              
               
            </field>
             
          </input-field>
          
          <input-field
            class="flex flex-col input-text "
          >
            <label
              for="0.text"
            >
              0.text
            </label>
             
            <field
              aria-label="0.text"
              class="w-full flex flex-row items-center"
            >
               
               
              <input
                id="0.text"
                name="0.text"
                type="text"
              />
              
              
               
            </field>
             
          </input-field>
          
          
        </field-layout>
        
        
      </item-editor>
    </list-editor>
    
  </div>
</body>
`;

exports[`ListEditor.svelte > should render slot content 1`] = `
<body>
  <div>
    <list-editor
      class="flex "
    >
      <list
        aria-label="list"
        class="flex flex-col w-full flex-shrink-0 select-none list"
        role="listbox"
        tabindex="0"
      >
         
        <item
          aria-selected="true"
          class="item"
          data-path="0"
          role="option"
        >
          
           
          <p>
            Alpha
          </p>
          
           
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="1"
          role="option"
        >
          
           
          <p>
            Beta
          </p>
          
           
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="2"
          role="option"
        >
          
           
          <p>
            Charlie
          </p>
          
           
        </item>
      </list>
       
      <item-editor
        class="flex"
      >
        <span>
          <button
            type="submit"
          >
            Save
          </button>
        </span>
         
        <field-layout
          aria-label=""
          class="object "
        >
          <input-field
            class="flex flex-col input-text disabled"
          >
            <label
              for="0.id"
            >
              0.id
            </label>
             
            <field
              aria-label="0.id"
              class="w-full flex flex-row items-center"
            >
               
               
              <input
                id="0.id"
                name="0.id"
                readonly=""
                type="text"
              />
              
              
               
            </field>
             
          </input-field>
          
          <input-field
            class="flex flex-col input-text "
          >
            <label
              for="0.text"
            >
              0.text
            </label>
             
            <field
              aria-label="0.text"
              class="w-full flex flex-row items-center"
            >
               
               
              <input
                id="0.text"
                name="0.text"
                type="text"
              />
              
              
               
            </field>
             
          </input-field>
          
          
        </field-layout>
        
        
      </item-editor>
    </list-editor>
    
  </div>
</body>
`;

exports[`ListEditor.svelte > should render slot content 2`] = `
<body>
  <div>
    <list-editor
      class="flex "
    >
      <list
        aria-label="list"
        class="flex flex-col w-full flex-shrink-0 select-none list"
        role="listbox"
        tabindex="0"
      >
         
        <item
          aria-selected="true"
          class="item"
          data-path="0"
          role="option"
        >
          
           
          <p>
            Alpha
          </p>
          
           
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="1"
          role="option"
        >
          
           
          <p>
            Beta
          </p>
          
           
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="2"
          role="option"
        >
          
           
          <p>
            Charlie
          </p>
          
           
        </item>
      </list>
       
      <item-editor
        class="flex below"
      >
        <span>
          <button
            type="submit"
          >
            Save
          </button>
        </span>
         
        <field-layout
          aria-label=""
          class="object "
        >
          <input-field
            class="flex flex-col input-text disabled"
          >
            <label
              for="0.id"
            >
              0.id
            </label>
             
            <field
              aria-label="0.id"
              class="w-full flex flex-row items-center"
            >
               
               
              <input
                id="0.id"
                name="0.id"
                readonly=""
                type="text"
              />
              
              
               
            </field>
             
          </input-field>
          
          <input-field
            class="flex flex-col input-text "
          >
            <label
              for="0.text"
            >
              0.text
            </label>
             
            <field
              aria-label="0.text"
              class="w-full flex flex-row items-center"
            >
               
               
              <input
                id="0.text"
                name="0.text"
                type="text"
              />
              
              
               
            </field>
             
          </input-field>
          
          
        </field-layout>
        
        
      </item-editor>
    </list-editor>
    
  </div>
</body>
`;

exports[`ListEditor.svelte > should render when item is selected 1`] = `
<body>
  <div>
    <list-editor
      class="flex "
    >
      <list
        aria-label="list"
        class="flex flex-col w-full flex-shrink-0 select-none list"
        role="listbox"
        tabindex="0"
      >
         
        <item
          aria-selected="false"
          class="item"
          data-path="0"
          role="option"
        >
          
           
          <p>
            Alpha
          </p>
          
           
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="1"
          role="option"
        >
          
           
          <p>
            Beta
          </p>
          
           
        </item>
        <item
          aria-selected="true"
          class="item"
          data-path="2"
          role="option"
        >
          
           
          <p>
            Charlie
          </p>
          
           
        </item>
      </list>
       
      <item-editor
        class="flex"
      >
         
        <field-layout
          aria-label=""
          class="object "
        >
          <input-field
            class="flex flex-col input-text disabled"
          >
            <label
              for="2.id"
            >
              0.id
            </label>
             
            <field
              aria-label="0.id"
              class="w-full flex flex-row items-center"
            >
               
               
              <input
                id="2.id"
                name="2.id"
                readonly=""
                type="text"
              />
              
              
               
            </field>
             
          </input-field>
          
          <input-field
            class="flex flex-col input-text "
          >
            <label
              for="2.text"
            >
              0.text
            </label>
             
            <field
              aria-label="0.text"
              class="w-full flex flex-row items-center"
            >
               
               
              <input
                id="2.text"
                name="2.text"
                type="text"
              />
              
              
               
            </field>
             
          </input-field>
          
          
        </field-layout>
        
        
      </item-editor>
    </list-editor>
    
  </div>
</body>
`;

exports[`ListEditor.svelte > should render with custom components 1`] = `
<body>
  <div>
    <list-editor
      class="flex my-list"
    >
      <list
        aria-label="list"
        class="flex flex-col w-full flex-shrink-0 select-none list"
        role="listbox"
        tabindex="0"
      >
         
        <item
          aria-selected="true"
          class="item"
          data-path="0"
          role="option"
        >
          <span>
            Alpha
          </span>
           
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="1"
          role="option"
        >
          <span>
            Beta
          </span>
           
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="2"
          role="option"
        >
          <span>
            Charlie
          </span>
           
        </item>
      </list>
       
      <item-editor
        class="flex"
      >
         
        <field-layout
          aria-label=""
          class="object "
        >
          <input-field
            class="flex flex-col input-text disabled"
          >
            <label
              for="items.0.id"
            >
              items.0.id
            </label>
             
            <field
              aria-label="items.0.id"
              class="w-full flex flex-row items-center"
            >
               
               
              <input
                id="items.0.id"
                name="items.0.id"
                readonly=""
                type="text"
              />
              
              
               
            </field>
             
          </input-field>
          
          <input-field
            class="flex flex-col input-text "
          >
            <label
              for="items.0.text"
            >
              items.0.text
            </label>
             
            <field
              aria-label="items.0.text"
              class="w-full flex flex-row items-center"
            >
               
               
              <input
                id="items.0.text"
                name="items.0.text"
                type="text"
              />
              
              
               
            </field>
             
          </input-field>
          
          
        </field-layout>
        
        
      </item-editor>
    </list-editor>
    
  </div>
</body>
`;

exports[`ListEditor.svelte > should render with custom components 2`] = `
<body>
  <div>
    <list-editor
      class="flex new-list"
    >
      <list
        aria-label="list"
        class="flex flex-col w-full flex-shrink-0 select-none list"
        role="listbox"
        tabindex="0"
      >
         
        <item
          aria-selected="true"
          class="item"
          data-path="0"
          role="option"
        >
          <span>
            Alpha
          </span>
           
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="1"
          role="option"
        >
          <span>
            Beta
          </span>
           
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="2"
          role="option"
        >
          <span>
            Charlie
          </span>
           
        </item>
      </list>
       
      <item-editor
        class="flex"
      >
         
        <field-layout
          aria-label=""
          class="object "
        >
          <input-field
            class="flex flex-col input-text disabled"
          >
            <label
              for="x.0.id"
            >
              items.0.id
            </label>
             
            <field
              aria-label="items.0.id"
              class="w-full flex flex-row items-center"
            >
               
               
              <input
                id="x.0.id"
                name="x.0.id"
                readonly=""
                type="text"
              />
              
              
               
            </field>
             
          </input-field>
          
          <input-field
            class="flex flex-col input-text "
          >
            <label
              for="x.0.text"
            >
              items.0.text
            </label>
             
            <field
              aria-label="items.0.text"
              class="w-full flex flex-row items-center"
            >
               
               
              <input
                id="x.0.text"
                name="x.0.text"
                type="text"
              />
              
              
               
            </field>
             
          </input-field>
          
          
        </field-layout>
        
        
      </item-editor>
    </list-editor>
    
  </div>
</body>
`;

exports[`ListEditor.svelte > should render with path 1`] = `
<body>
  <div>
    <list-editor
      class="flex "
    >
      <list
        aria-label="list"
        class="flex flex-col w-full flex-shrink-0 select-none list"
        role="listbox"
        tabindex="0"
      >
         
        <item
          aria-selected="true"
          class="item"
          data-path="0"
          role="option"
        >
          
           
          <p>
            Alpha
          </p>
          
           
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="1"
          role="option"
        >
          
           
          <p>
            Beta
          </p>
          
           
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="2"
          role="option"
        >
          
           
          <p>
            Charlie
          </p>
          
           
        </item>
      </list>
       
      <item-editor
        class="flex"
      >
         
        <field-layout
          aria-label=""
          class="object "
        >
          <input-field
            class="flex flex-col input-text disabled"
          >
            <label
              for="items.0.id"
            >
              items.0.id
            </label>
             
            <field
              aria-label="items.0.id"
              class="w-full flex flex-row items-center"
            >
               
               
              <input
                id="items.0.id"
                name="items.0.id"
                readonly=""
                type="text"
              />
              
              
               
            </field>
             
          </input-field>
          
          <input-field
            class="flex flex-col input-text "
          >
            <label
              for="items.0.text"
            >
              items.0.text
            </label>
             
            <field
              aria-label="items.0.text"
              class="w-full flex flex-row items-center"
            >
               
               
              <input
                id="items.0.text"
                name="items.0.text"
                type="text"
              />
              
              
               
            </field>
             
          </input-field>
          
          
        </field-layout>
        
        
      </item-editor>
    </list-editor>
    
  </div>
</body>
`;
